Refs #97956 display logo image on non mobile res and avoid forest image loading for mobile

--- a/src/forests/theme/skins/fise_theme_styles/components/header.less
+++ b/src/forests/theme/skins/fise_theme_styles/components/header.less
@@ -11,7 +11,6 @@
 #portal-logo {
   margin: 0;
   z-index: 10;
-  display: none;
 }
 
 #portal-logo img {
@@ -315,7 +314,7 @@
     text-align: center;
   }
 
-  #portal-header {
+  #portal-header, .header-image {
     background: @primary-green;
   }
 
